--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -59,48 +59,41 @@
 }
 
 @media only screen and (max-width: 768px) {
-  .header__menubar {
-    visibility: visible;
-  }
-
   .header__smalls {
     display: flex;
-    justify-content: space-around;
     align-items: center;
+    justify-content: space-around;
+    /* justify-content: space-around;
+    align-items: center; */
     color: #444;
   }
 
+  /* .header__menuIcons {
+    margin-left: 9rem;
+  } */
+
+  .header__Title {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .header__menuIconSingle {
+    padding: 0 10px;
+  }
+
   .header__menubar {
-    height: 300px;
-    width: 300px;
-  }
-
-  .header__bars {
-    height: 22px;
-    width: 30px;
-    position: fixed;
-    left: 20px;
-  }
-
-  .header__bars > div {
-    height: 22px;
-    width: 30px;
-    position: fixed;
-    right: 20px;
+    display: block;
+    cursor: pointer;
+    color: #444;
+    height: 50px;
+    width: 50px;
+    margin-left: 5px;
   }
 
   .header {
     height: 15vh;
     letter-spacing: 0.5px;
     background-color: #f8f8f8;
-  }
-
-  .header__menubar {
-    color: #444;
-    height: 50px;
-    width: 50px;
-    margin-left: 20px;
-    cursor: pointer;
   }
 
   .header__menu,
